03_modelo/Op_AMVA60m/Log_Ejecucion.txt
Traceback (most recent call last):
  File "/media/nicolas/Home/Jupyter/Soraya/git/Alarmas/03_modelo/Op_AMVA60m/Cron_Ejecucion.py", line 10, in <module>
    import alarmas as al
  File "/media/nicolas/Home/Jupyter/Soraya/git/Alarmas/03_modelo/Op_AMVA60m/alarmas.py", line 63
    List=[]
          ^
IndentationError: unindent does not match any outer indentation level
